--- a/pages/homePage/index.html
+++ b/pages/homePage/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- header code -->
     <header>
         <div class="titleContainer">
             <h1 class="title">
@@ -16,6 +17,7 @@
             </h1>
         </div>
     </header>
+    <!-- Code for the header links -->
     <div class="headerLinksContainer">
             <a href="../homePage/index.html" class="homeLink" id="underlineLink">
                 Home
@@ -24,34 +26,46 @@
                 Search
             </a>
         </div>
+        <!-- code the main content container area -->
     <div class="mainContentContainer">
-        
+        <!-- container for the introduction title and paragraph -->
         <div class="introductionContainer">
+            <!-- introduction title -->
             <h1>
                 What is SPA?
             </h1>
             <br>
+            <!-- introduction paragraph -->
             <p class="introductionParagraph">
                 <span class="orangeText">SPA (State Pircing Analytics)</span> is a state based comparison, where you can compare different <span class="orangeText">basic needs</span> between states. This includes <span class="orangeText">insurance rates</span>, pricing, <span class="orangeText">healthcare</span>, and more! <span class="orangeText">SPA</span> is the perfect way to <span class="orangeText">quickly</span> see different useful information about each state.
             </p>
         </div>
+        <!-- container for the how to title and paragraph -->
         <div class="howToContainer">
-            <h1>How Do You Use SPA?</h1>
+            <!-- title for the how to area -->
+            <h1>
+                How Do You Use SPA?
+            </h1>
             <br>
+            <!-- paragraph for the how to section -->
             <p class="howToParagraph">
                 To use SPA, click on "search" found at the top of this page. This will bring you to a page where you can select two different states, and then compare them based on what you choose. For instance, you can compare Texas's and Wyoming's population, or New York's and Arizona's state revenue. . 
             </p>
             <br>
             <br>
+            <!-- second how to paragraph -->
             <p class="howToParagraph">
                 You select the first state you want to compare on the left and then the second state you want to compare on the right. Then you will choose what you want to compare them by in the center of the page. Hit enter and you have your desired results!
             </p>
         </div>
+        <!-- container for the goals area -->
         <div class="goalsContainer">
+            <!-- title for the goals section -->
             <h1>
                 What are our Goals?
             </h1>
             <br>
+            <!-- paragraph for the goals section -->
             <p class="goalsParagraph">
                 The main goal for <span class="orangeText">SPA</span> is to help those <span class="orangeText">in need</span>. Familes who need to move <span class="orangeText">across</span> the <span class="orangeText">country</span>, people who are <span class="orangeText">too poor</span> to live in a certain <span class="orangeText">state</span>, and just those who need <span class="orangeText">access</span> to this <span class="orangeText">information</span>. It helps <span class="orangeText">everyone</span>, and <span class="orangeText">SPA</span> is for the common man. <span class="orangeText">Anyone</span> can use it, and that is what's <span class="orangeText">important</span>.
             </p>
@@ -65,10 +79,12 @@
     <br>
     <br>
     <br>
+    <!-- code for the footer -->
     <footer>
         <h1 class="footerTitle">
             Contact Us
         </h1>
+        <!-- contact us container -->
         <div class="contactUsContainer">
             <span class="footerPhoneNumber">
                 +1(480) 714-8699
