made code way smaller and more efficient
- made code way smaller and more efficient
- made it so you can capitalize Comparators
- Made text scale with clamp()
- Name change
- Title change
- Checks if they put in an incorrect comparator
- other random small changes

--- a/pages/homePage/index.html
+++ b/pages/homePage/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <!-- header code -->
     <header>
         <div class="titleContainer">
             <h1 class="title">
-                S.P.A.
-                <div class="subTitle">State Pricing Analytics</div>
+                S.A.
+                <div class="subTitle">State Analytics</div>
             </h1>
         </div>
     </header>
@@ -32,24 +32,24 @@
         <div class="introductionContainer">
             <!-- introduction title -->
             <h1>
-                What is SPA?
+                What is SA?
             </h1>
             <br>
             <!-- introduction paragraph -->
             <p class="introductionParagraph">
-                <span class="orangeText">SPA (State Pircing Analytics)</span> is a state based comparison, where you can compare different <span class="orangeText">basic needs</span> between states. This includes <span class="orangeText">insurance rates</span>, pricing, <span class="orangeText">healthcare</span>, and more! <span class="orangeText">SPA</span> is the perfect way to <span class="orangeText">quickly</span> see different useful information about each state.
+                <span class="orangeText">SA (State Analytics)</span> is a state based comparison, where you can compare different <span class="orangeText">basic needs</span> between states. This includes <span class="orangeText">insurance rates</span>, pricing, <span class="orangeText">healthcare</span>, and more! <span class="orangeText">SA</span> is the perfect way to <span class="orangeText">quickly</span> see different useful information about each state.
             </p>
         </div>
         <!-- container for the how to title and paragraph -->
         <div class="howToContainer">
             <!-- title for the how to area -->
             <h1>
-                How Do You Use SPA?
+                How Do You Use SA?
             </h1>
             <br>
             <!-- paragraph for the how to section -->
             <p class="howToParagraph">
-                To use SPA, click on "search" found at the top of this page. This will bring you to a page where you can select two different states, and then compare them based on what you choose. For instance, you can compare Texas's and Wyoming's population, or New York's and Arizona's state revenue. . 
+                To use SA, click on "search" found at the top of this page. This will bring you to a page where you can select two different states, and then compare them based on what you choose. For instance, you can compare Texas's and Wyoming's population, or New York's and Arizona's state revenue. . 
             </p>
             <br>
             <br>
@@ -67,7 +67,7 @@
             <br>
             <!-- paragraph for the goals section -->
             <p class="goalsParagraph">
-                The main goal for <span class="orangeText">SPA</span> is to help those <span class="orangeText">in need</span>. Familes who need to move <span class="orangeText">across</span> the <span class="orangeText">country</span>, people who are <span class="orangeText">too poor</span> to live in a certain <span class="orangeText">state</span>, and just those who need <span class="orangeText">access</span> to this <span class="orangeText">information</span>. It helps <span class="orangeText">everyone</span>, and <span class="orangeText">SPA</span> is for the common man. <span class="orangeText">Anyone</span> can use it, and that is what's <span class="orangeText">important</span>.
+                The main goal for <span class="orangeText">SA</span> is to help those <span class="orangeText">in need</span>. Familes who need to move <span class="orangeText">across</span> the <span class="orangeText">country</span>, people who are <span class="orangeText">too poor</span> to live in a certain <span class="orangeText">state</span>, and just those who need <span class="orangeText">access</span> to this <span class="orangeText">information</span>. It helps <span class="orangeText">everyone</span>, and <span class="orangeText">SA</span> is for the common man. <span class="orangeText">Anyone</span> can use it, and that is what's <span class="orangeText">important</span>.
             </p>
         </div>
     </div>
